--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div id="first_page">
                 <h1>Witaj w grze STAR WARS CARDS!</h1>
-                <a href="file:///C:/Users/rzbyt/OneDrive/Pulpit/Gra%20karciana/game.html" class="button">Rozpocznij</a>
+                <a href="https://konradgmur.github.io/Star-Wars-Game/game.html" class="button">Rozpocznij</a>
             </div>
         </nav>
     </header>
