--- a/game.html
+++ b/game.html
@@ -57,7 +57,7 @@
     </main>
 
     <script src="jquery-3.4.1.min.js"></script>
-    <script src="draw.js"></script>
+    <script src="draw.min.js"></script>
 
 </body>
 
